--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-# Page in build
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    Page en construction
+</body>
+</html>
